package Ejercicio2;

public class ExcepcionStockDesbordado extends Throwable {
    public ExcepcionStockDesbordado(String s) {
        super(s);
    }
    // Esta clase se utiliza para representar una excepción controlada cuando el stock de un libro excede la capacidad máxima permitida. El mensaje asociado es "El stock del libro excede la capacidad de este sistema".






}
